# hypemod

./: LICENSE  README.md  pyproject.toml
src/hypemod/: __init__.py  console.py
