[tool.poetry]
name = "hypemod"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "The hypemod project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/metvop/hypemod"
repository = "https://github.com/metvop/hypemod"
keywords = ["hypemod"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypemod = "hypemod.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

